Update ADT server code to reflect ansible-creator CLI changes
